fix: overflow of description in projects section for better visuals with making gap smaller

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -785,7 +785,7 @@ header {
   }
 
   .portfolio__content {
-    column-gap: 4rem;
+    column-gap: 3.5rem;
   }
 
   .swiper-portfolio-icon {
